--- a/encriptador/index.html
+++ b/encriptador/index.html
@@ -27,8 +27,8 @@
       </div>
       
       <div class="botoes">
-        <button class="btn-encriptar">Encriptar</button>
-        <button class="btn-desencriptar">Desencriptar</button>
+        <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
+        <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
       </div>
     </section>
 
@@ -36,7 +36,7 @@
       <textarea class="mensagem" placeholder="" cols="20" rows="10" disabled></textarea>
       <h6>Nenhuma mensagem encontrada</h6>
       <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
-      <button class="btn-copiar">Copiar</button>
+      <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
     </section>
   </main>
 
