update index.html and style.css

--- a/encriptador/index.html
+++ b/encriptador/index.html
@@ -34,8 +34,9 @@
 
     <section class="result">
       <textarea class="mensagem" placeholder="" cols="20" rows="10" disabled></textarea>
-      <h6>Nenhuma mensagem encontrada</h6>
-      <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+      <img class="tagRemove" src="images/pesquisador.png" alt="Imagem do pesquisador">
+      <h6 class="tagRemove">Nenhuma mensagem encontrada</h6>
+      <p class="tagRemove">Digite um texto que você deseja criptografar ou descriptografar.</p>
       <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
     </section>
   </main>
