update index.html, style.css and script.js

--- a/encriptador/index.html
+++ b/encriptador/index.html
@@ -23,7 +23,7 @@
       <textarea class="text-area" cols="41" rows="4" placeholder="Digite o seu texto"></textarea>
       
       <div class="informacao">
-        <h6>Apenas letras minúsculas e sem acento.</h6>
+        <h6><i class="fa-solid fa-circle-info"></i> Apenas letras minúsculas e sem acento.</h6>
       </div>
       
       <div class="botoes">
@@ -34,13 +34,14 @@
 
     <section class="result">
       <textarea class="mensagem" placeholder="" cols="20" rows="10" disabled></textarea>
-      <img class="tagRemove" src="images/pesquisador.png" alt="Imagem do pesquisador">
-      <h6 class="tagRemove">Nenhuma mensagem encontrada</h6>
-      <p class="tagRemove">Digite um texto que você deseja criptografar ou descriptografar.</p>
+      <img class="imgResult" src="images/pesquisador.png" alt="Imagem do pesquisador">
+      <h6 class="titleResult">Nenhuma mensagem encontrada</h6>
+      <p class="textResult">Digite um texto que você deseja criptografar ou descriptografar.</p>
       <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
     </section>
   </main>
 
   <script src="scripts/script.js"></script>
+  <script src="https://kit.fontawesome.com/5871f9f580.js" crossorigin="anonymous"></script>
 </body>
 </html>
